# aronet

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  flake.nix  meson.build  pyproject.toml
.github/workflows/: release.yaml  static-check.yaml
aronet/: Cargo.toml  build.sh  config.py  main.py  meson.build  netlink.py  util.py
aronet/cmd/: __init__.py  daemon.py  load.py  swanctl.py
aronet/daemon/: __init__.py  bird.py  strongswan.py
aronet/libexec/: updown.sh
aronet/src/: lib.rs  main.rs
aronet/src/command/: birdcl.rs  daemon.rs  mod.rs  swanctl.rs
aronet/src/daemon/: bird.rs  mod.rs  strongswan.rs
aronet/src/utils/: configuration.rs  mod.rs  netlink.rs  vici.rs
example/: config.json  registry.json
subprojects/: babeld.wrap  bird.wrap  strongswan.wrap
subprojects/packagefiles/babeld/: build.sh  meson.build
subprojects/packagefiles/bird/: meson.build
subprojects/packagefiles/strongswan/: build.sh  meson.build  post-install.sh
tests/: run_tests.sh
tests/config/: registry.json
tests/config/earth/: config.json
tests/config/mars/: config.json
tests/config/moon/: config.json
tests/config/sun/: config.json
