[project]
name = "aronet"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    "vici",
    "cryptography",
    "pyroute2",
    "jsonschema"
]

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project.scripts]
aronet = "aronet.main:main"

[tool.ruff]
indent-width = 4
