[project]
name = "aronet"
description = "Auto routed full mesh overlay networks."
readme = "README.md"
version = "v0.1-alpha1"
requires-python = ">= 3.10"
dependencies = [
    "vici",
    "cryptography",
    "pyroute2",
    "jsonschema"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/RMTT/aronet"
Repository = "https://github.com/RMTT/aronet.git"

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project.scripts]
aronet = "aronet.main:main"

[tool.ruff]
indent-width = 4
