[package]
name = "aronet"
version = "0.1.0-beta1"
edition = "2024"

[dependencies]
adler2 = "2.0.1"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
netlink-packet-route = "0.24.0"
nix = { version = "0.30.1", features = ["sched"] }
openssl = "0.10.73"
rsvici = "0.1.2"
rtnetlink = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
